# pl-football

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: FEATURE_ENGINEERING_ML_REFERENCE.md  ML_PIPELINE_DOCUMENTATION.md
models/: deep_dual_model.pkl  deep_outcome_model.pkl  ensemble_match_result.pkl  score_predictor.pkl
notebooks/: 01_data_overview_eda.ipynb  02_team_performance_analysis.ipynb  03_match_analytics_deep_dive.ipynb  04_advanced_team_stats.ipynb  05_summary_insights.ipynb
src/: __init__.py
src/ml/: __init__.py  data_pipeline.py  deep_models.py  feature_engineering.py  models.py  predict.py  process_data.py  train.py  tuning.py
src/scraper/: __init__.py  config.py  data_processor.py  fbref_scraper.py  run_scraper.py  utils.py
