[project]
name = "pl-football"
version = "1.0.0"
description = "Premier League match prediction using FBREF data - comprehensive web scraper and ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web scraping
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cloudscraper>=1.2.71",
    "requests>=2.31.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Utilities
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
    # Machine learning
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
fbref-scraper = "run_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
